--- a/style.css
+++ b/style.css
@@ -28,11 +28,11 @@ h2 {
     justify-content: center;
     align-items: center;
     max-width: 80rem;
-    margin:0 auto;
-    padding: 2rem;
+    margin: 0 auto;
+    padding: 2rem; 
 }
 
-.flex-colum {
+.flex-column {
     display: flex;
     flex-direction: column;
 }
@@ -63,13 +63,14 @@ h2 {
     margin-bottom: 1rem;
     text-decoration: none;
     color:  rgb(28,26,26);
-    background: linear-gradient(90deg, blue)0%,rgb(0,102,255),100%;
+    /* background-color: blue; */
+    background: linear-gradient(90deg, rgb(18, 92,255) 0%,rgb(0, 10, 255),100%);
     border-radius: 4px ;
 }
 
-.btn:hover  {
+.btn:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 0 blue;
+    box-shadow: 0 0.4rem 1.4rem 0 rgb(8,114,244);
     transition: transform  150ms;
     transform: scale(1.03);
 }
@@ -78,6 +79,14 @@ h2 {
     cursor: not-allowed;
     box-shadow: none;
     transform: none;
+}
+
+#high-scores-btn {
+    background: linear-gradient(90deg, rgb(255,247,9)0%, rgb(240,221,6)100%);
+}
+
+#high-scores-btn:hover {
+    box-shadow: 0 0.4rem 0  rgb(255,255,0);
 }
 
 #scores-btn {
@@ -91,6 +100,45 @@ background: linear-gradient(90deg, yellow) 0% yellow 100%;
 #score-btn {
  background: yellow;   
 }
+
+.end-form-container  {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 30rem;
+}
+
+input {
+    margin-bottom: 1rem;
+    width: 20rem;
+    padding: 1.5rem;
+    font-size: 1.8rem;
+    border: none;
+    box-shadow: 0,0.1rem 1.4rem 0 rgb(86,185,235);
+}
+
+input::placeholder {
+    color:#aaa
+}
+
+#username{
+    margin-bottom: 3rem;
+    width:100%;
+    outline: none;
+}
+
+#end-text {
+    font-size: 2.4rem;
+    color: #fff;
+    text-align: center;
+}
+
+#saveScoreBtn  {
+    border: none;
+}
+
+ 
 /* GIVEN I am taking a code quiz
 WHEN I click the start button
 THEN a timer starts and I am presented with a question
