--- a/rumble.css
+++ b/rumble.css
@@ -1,70 +1,72 @@
 body {
-    color: #fff
+    color: white;
 }
 
 .choice-container {
-    /* display: flex; */
-    margin-bottom: 0.8rem; 
-    width: 100%;
-    border-radius: 4px; 
-    background:rgb(18,93,255); 
-    font-size: 3rem;
-    min-width: 80rem;
+display: flex;
+margin-bottom: 0.8rem;
+width: 100%;
+border-radius: 4px;
+background-color: blue;
+font-size: 3rem;
+min-width: 80rem;
 }
 
-/* .choice-container:hover {
+.choice-container:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0rgb(6,103,247);
-    transform: scale(1.02);
-    transform: transform  100ms;
+    box-shadow: 0 0.4rem blue;
+    transform: scale (1.02);
+    transform:transform 150ms;
 }
 
 .choice-prefix {
     padding: 2rem 2.5rem;
-    color: white
+    color: white;
 }
-
 .choice-text {
     padding: 2rem;
     width: 100%;
 }
 
 .correct {
-    background:  linear-gradient(32deg, rgb(11,223,36)0%, rgb(41,232,111)) 100%;
+    background-color: green;
 }
 
 .incorrect {
-    background:linear-gradient(32deg, rgb(230,29,1)0%, rgb(224,11,11)100%) 
+    background-color: red;
 }
 
-#hud{
+#hud {
     display: flex;
     justify-content: space-between;
 }
+
 .hud-prefix {
-    text-align:center;
+    text-align: center;
     font-size: 2rem;
 }
 
-.hud-main-text{
+.hud-main-text {
     text-align: center;
 }
 
-#progressBar{
-    width: 20rem;
-    height: 3rem;
-    border-radius: 50px;
-    overflow: hidden;
+#progressBar {
+width: 20rem;
+height: 3rem;
+border: 0.2rem solid green;
+margin-top: 2rem;
+border-radius: 50px;
+overflow: hidden;
 }
 
-#progressBarrFull {
+#progressBarFull {
     height: 100%;
     background: green;
-    width: 0%  ;
+    width: 0%;
 }
-/* Pro ress bar option */
-@media  screen and (max-width: 768px,){
-    .choice-container{
-        min-width: 40rem;
+
+@media  screen and (max-width:760px){
+    .choice-container {
+        min-width:40rem;
     }
-} 
+}
