--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-:root{
+:root {
     background-color: rgb(29,26,26);
 }
 
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-size: 62.5%;
-    font-family: "lato", cursive;
+    font-family: 'lato', cursive;
 }
 
-h1 {
+h1  {
     font-size: 5.4rem;
     color: white;
     margin-bottom: 5rem;
@@ -21,7 +21,7 @@ h2 {
     margin-bottom: 4rem;
 }
 
- .container {
+.container {
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -29,7 +29,7 @@ h2 {
     align-items: center;
     max-width: 80rem;
     margin: 0 auto;
-    padding: 2rem; 
+    padding: 2rem;
 }
 
 .flex-column {
@@ -41,19 +41,10 @@ h2 {
     justify-content: center;
     align-items: center;
 }
- 
-.justify-center {
-    justify-content: center;
-}
-
-.text-center{
-    text-align: center;
-}
 
 .hidden {
     display: none;
 }
-
 
 .btn {
     font-size: 2.4rem;
@@ -62,91 +53,27 @@ h2 {
     text-align: center;
     margin-bottom: 1rem;
     text-decoration: none;
-    color:  rgb(28,26,26);
-    /* background-color: blue; */
-    background: linear-gradient(90deg, rgb(18, 92,255) 0%,rgb(0, 10, 255),100%);
-    border-radius: 4px ;
+    color: black;
+    background-color: blue;
+    border-radius: 4px;
 }
 
 .btn:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rgb(8,114,244);
     transition: transform  150ms;
-    transform: scale(1.03);
+    transform:scale(1.03);
 }
 
 .btn[disabled]:hover {
-    cursor: not-allowed;
-    box-shadow: none;
-    transform: none;
+cursor: not-allowed;
+box-shadow: none;
+transform:none;
 }
 
-#high-scores-btn {
-    background: linear-gradient(90deg, rgb(255,247,9)0%, rgb(240,221,6)100%);
+#high-score-btn {
+    background-color: yellow;
 }
 
-#high-scores-btn:hover {
-    box-shadow: 0 0.4rem 0  rgb(255,255,0);
+#high-score-btn {
+    box-shadow: 0 0.4rem 1.4rem black;
 }
-
-#scores-btn {
-background: linear-gradient(90deg, yellow) 0% yellow 100%;
-}
-
-#scores-btn {
-    box-shadow: 0 0.4rem 0 black;
-}
-
-#score-btn {
- background: yellow;   
-}
-
-.end-form-container  {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 30rem;
-}
-
-input {
-    margin-bottom: 1rem;
-    width: 20rem;
-    padding: 1.5rem;
-    font-size: 1.8rem;
-    border: none;
-    box-shadow: 0,0.1rem 1.4rem 0 rgb(86,185,235);
-}
-
-input::placeholder {
-    color:#aaa
-}
-
-#username{
-    margin-bottom: 3rem;
-    width:100%;
-    outline: none;
-}
-
-#end-text {
-    font-size: 2.4rem;
-    color: #fff;
-    text-align: center;
-}
-
-#saveScoreBtn  {
-    border: none;
-}
-
- 
-/* GIVEN I am taking a code quiz
-WHEN I click the start button
-THEN a timer starts and I am presented with a question
-WHEN I answer a question
-THEN I am presented with another question
-WHEN I answer a question incorrectly
-THEN time is subtracted from the clock
-WHEN all questions are answered or the timer reaches 0
-THEN the game is over
-WHEN the game is over
-THEN I can save my initials and my score */
