added a timer that half works

--- a/rumble.css
+++ b/rumble.css
@@ -54,7 +54,7 @@ min-width: 80rem;
 width: 20rem;
 height: 3rem;
 border: 0.2rem solid green;
-margin-top: 2rem;
+/* margin-top: 2rem; */
 border-radius: 50px;
 overflow: hidden;
 }
