--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    background-color: rgb(29,26,26);
+    background-color: rgb(63, 30, 30);
 }
 
 * {
@@ -54,7 +54,7 @@ h2 {
     margin-bottom: 1rem;
     text-decoration: none;
     color: black;
-    background-color: blue;
+    background-color: rgb(35, 35, 109);
     border-radius: 4px;
 }
 
@@ -81,6 +81,7 @@ transform:none;
 .end-form-container  {
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     max-width: 30rem;
 }
